formMethod to have empty string as default value and 'get' as invalid. https://bugs.webkit.org/show_bug.cgi?id=108263

Reviewed by Kent Tamura.

The spec says formmethod should only have an invalid value default, not a missing value default.
Spec: http://www.whatwg.org/specs/web-apps/current-work/#form-submission-0
      http://www.w3.org/html/wg/drafts/html/master/forms.html#attr-fs-formmethod

Source/WebCore:

Test: fast/forms/formmethod-attribute-test.html

* html/HTMLFormControlElement.cpp: For the missing formMethod attr return empty string.
(WebCore::HTMLFormControlElement::formMethod):

LayoutTests:

* fast/forms/formmethod-attribute-test-expected.txt: Added.
* fast/forms/formmethod-attribute-test.html: Added.
* fast/forms/submit-form-attributes-expected.txt:
* fast/forms/submit-form-attributes.html: Modified test to behave as expected.


Canonical link: https://commits.webkit.org/126677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141405 268f45cc-cd09-0410-ab3c-d52691b4dbfc